# examples

./: README.md
docker-cpp-flask/: README.md  docker-compose.yml
docker-cpp-flask/api/: Dockerfile  Pipfile  app.py  main.sh
docker-cpp-flask/core/: Dockerfile
docker-cpp-flask/core/src/: CMakeLists.txt  hello_world.h  main.cpp
